==> tetrafolium/micropython/ports/esp32/modmachine.c <==
#include <stdint.h>
#include <stdio.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "esp32/clk.h"
#include "esp32/rom/rtc.h"
#include "esp_sleep.h"
#include "esp_clk.h"
#include "rom/ets_sys.h"
#include "rom/rtc.h"
#include "driver/touch_pad.h"
#include "esp_pm.h"
#include "extmod/machine_i2c.h"
#include "extmod/machine_mem.h"
#include "extmod/machine_pulse.h"
#include "extmod/machine_signal.h"
#include "extmod/machine_spi.h"
#include "lib/utils/pyexec.h"
#include "machine_rtc.h"
#include "modmachine.h"
#include "py/obj.h"
#include "py/runtime.h"

STATIC mp_obj_t machine_freq(size_t n_args, const mp_obj_t *args) {
  if (n_args == 0) {
    // get
    return mp_obj_new_int(esp_clk_cpu_freq());
  } else {
    // set
    mp_int_t freq = mp_obj_get_int(args[0]) / 1000000;
    if (freq != 20 && freq != 40 && freq != 80 && freq != 160 && freq != 240) {
      mp_raise_ValueError(MP_ERROR_TEXT(
          "frequency must be 20MHz, 40MHz, 80Mhz, 160MHz or 240MHz"));
    }
    esp_pm_config_esp32_t pm;
    pm.max_freq_mhz = freq;
    pm.min_freq_mhz = freq;
    pm.light_sleep_enable = false;
    esp_err_t ret = esp_pm_configure(&pm);
    if (ret != ESP_OK) {
      mp_raise_ValueError(NULL);
    }
    while (esp_clk_cpu_freq() != freq * 1000000) {
      vTaskDelay(1);
    }
    return mp_const_none;
  }
}

STATIC mp_obj_t machine_lightsleep(size_t n_args, const mp_obj_t *pos_args,
                                   mp_map_t *kw_args) {
  return machine_sleep_helper(MACHINE_WAKE_SLEEP, n_args, pos_args, kw_args);
}

STATIC mp_obj_t machine_deepsleep(size_t n_args, const mp_obj_t *pos_args,
                                  mp_map_t *kw_args) {
  return machine_sleep_helper(MACHINE_WAKE_DEEPSLEEP, n_args, pos_args,
                              kw_args);
}
