==> tetrafolium/micropython/ports/stm32/modmachine.c <==
#include <stdio.h>
#include <string.h>
#include "extmod/machine_i2c.h"
#include "extmod/machine_mem.h"
#include "extmod/machine_pulse.h"
#include "extmod/machine_signal.h"
#include "extmod/machine_spi.h"
#include "extmod/vfs.h"
#include "extmod/vfs_fat.h"
#include "gccollect.h"
#include "i2c.h"
#include "irq.h"
#include "lib/oofatfs/ff.h"
#include "lib/utils/pyexec.h"
#include "modmachine.h"
#include "pin.h"
#include "powerctrl.h"
#include "py/gc.h"
#include "py/mperrno.h"
#include "py/mphal.h"
#include "py/objstr.h"
#include "py/runtime.h"
#include "pybthread.h"
#include "rng.h"
#include "rtc.h"
#include "spi.h"
#include "storage.h"
#include "timer.h"
#include "uart.h"
#include "usb.h"
#include "wdt.h"
#define RCC_CSR_BORRSTF RCC_CSR_PORRSTF
#define RCC_CSR_PORRSTF RCC_CSR_BORRSTF
#define RCC_SR RSR
#define RCC_SR_IWDGRSTF RCC_RSR_IWDG1RSTF
#define RCC_SR_WWDGRSTF RCC_RSR_WWDG1RSTF
#define RCC_SR_PORRSTF RCC_RSR_PORRSTF
#define RCC_SR_BORRSTF RCC_RSR_BORRSTF
#define RCC_SR_PINRSTF RCC_RSR_PINRSTF
#define RCC_SR_RMVF RCC_RSR_RMVF
#define RCC_SR CSR
#define RCC_SR_IWDGRSTF RCC_CSR_IWDGRSTF
#define RCC_SR_WWDGRSTF RCC_CSR_WWDGRSTF
#define RCC_SR_PORRSTF RCC_CSR_PORRSTF
#define RCC_SR_BORRSTF RCC_CSR_BORRSTF
#define RCC_SR_PINRSTF RCC_CSR_PINRSTF
#define RCC_SR_RMVF RCC_CSR_RMVF
#define PYB_RESET_SOFT (0)
#define PYB_RESET_POWER_ON (1)
#define PYB_RESET_HARD (2)
#define PYB_RESET_WDT (3)
#define PYB_RESET_DEEPSLEEP (4)

STATIC mp_obj_t machine_freq(size_t n_args, const mp_obj_t *args) {
  if (n_args == 0) {
    // get
    mp_obj_t tuple[] = {
      mp_obj_new_int(HAL_RCC_GetSysClockFreq()),
      mp_obj_new_int(HAL_RCC_GetHCLKFreq()),
      mp_obj_new_int(HAL_RCC_GetPCLK1Freq()),
#if !defined(STM32F0)
      mp_obj_new_int(HAL_RCC_GetPCLK2Freq()),
#endif
    };
    return mp_obj_new_tuple(MP_ARRAY_SIZE(tuple), tuple);
  } else {
    // set
#if defined(STM32F0) || defined(STM32L0) || defined(STM32L4)
    mp_raise_NotImplementedError(
        MP_ERROR_TEXT("machine.freq set not supported yet"));
#else
    mp_int_t sysclk = mp_obj_get_int(args[0]);
    mp_int_t ahb = sysclk;
#if defined(STM32H7)
    if (ahb > 200000000) {
      ahb /= 2;
    }
#endif
#if defined(STM32WB)
    mp_int_t apb1 = ahb;
    mp_int_t apb2 = ahb;
#else
    mp_int_t apb1 = ahb / 4;
    mp_int_t apb2 = ahb / 2;
#endif
    if (n_args > 1) {
      ahb = mp_obj_get_int(args[1]);
      if (n_args > 2) {
        apb1 = mp_obj_get_int(args[2]);
        if (n_args > 3) {
          apb2 = mp_obj_get_int(args[3]);
        }
      }
    }
    int ret = powerctrl_set_sysclk(sysclk, ahb, apb1, apb2);
    if (ret == -MP_EINVAL) {
      mp_raise_ValueError(MP_ERROR_TEXT("invalid freq"));
    } else if (ret < 0) {
      void NORETURN __fatal_error(const char *msg);
      __fatal_error("can't change freq");
    }
    return mp_const_none;
#endif
  }
}

STATIC mp_obj_t machine_lightsleep(size_t n_args, const mp_obj_t *args) {
  if (n_args != 0) {
    mp_obj_t args2[2] = {MP_OBJ_NULL, args[0]};
    pyb_rtc_wakeup(2, args2);
  }
  powerctrl_enter_stop_mode();
  return mp_const_none;
}

STATIC mp_obj_t machine_deepsleep(size_t n_args, const mp_obj_t *args) {
  if (n_args != 0) {
    mp_obj_t args2[2] = {MP_OBJ_NULL, args[0]};
    pyb_rtc_wakeup(2, args2);
  }
  powerctrl_enter_standby_mode();
  return mp_const_none;
}
